<resources>
    <string name="app_name">365 Watches</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_text">Log in</string>
    <string name="_365_">365</string>
    <string name="watches">Watches</string>
    <string name="lets_go">let\'s go</string>
    <string name="intro_text">Everyone looks at your watch and it represents who you are, your value and your personal style.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="submit">Submit</string>
    <string name="username_cant_empty">Username field can\'t be empty.</string>
    <string name="password_cant_empty">Password field can\'t be empty.</string>
    <string name="root_name">Users</string>
    <string name="products_root_name">Products</string>
    <string name="username_does_not_exist">Username does not exist.</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="name_text">Name</string>
    <string name="name_field_cant_be_empty">Name field can\'t be empty.</string>
    <string name="user_registered_successfully">User registered successfully.</string>
    <string name="unable_to_register_user">Unable to register user.</string>
    <string name="no_internet_available">No internet connection! Please check your internet connectivity.</string>
    <string name="user_already_registered">User is already registered.</string>
    <string name="search_hint">Search</string>
    <string name="made_only_for_kings">Made only for Kings</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy now</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="item_added_to_cart">Item added to cart.</string>
    <string name="item_removed_to_cart">Item removed from cart.</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="sign_out">Sign Out</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="add_a_new_address">Add a New Address</string>
    <string name="country_region">Country Region</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal, Code</string>
    <string name="your_postal_code">Postal Code</string>
    <string name="add_a_new_card">Add a New Card</string>
    <string name="enter_the_name_of_the_cardholder">Enter the Name of the Cardholder</string>
    <string name="enter_the_cardnumber">Enter the Card Number*</string>
    <string name="enter_the_expiry_date_and_year">Enter the Expiry Date and Year*</string>
    <string name="enter_cvv_number">Enter CVV Number*</string>
    <string name="stephen">Stephen</string>
    <string name="canada">Canada</string>
    <string name="dummy_add_hint">168 Kennedy Rd S</string>
    <string name="brampton">Brampton</string>
    <string name="postal_cod_hint">L6W3G6</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="region_field_cant_be_empty">Country region field can\'t be empty.</string>
    <string name="phone_field_cant_empty">Phone number field can\'t be empty.</string>
    <string name="add_cant_empty">Address field can\'t be empty.</string>
    <string name="city_cant_empty">City field can\'t be empty.</string>
    <string name="postal_cant_empty">Postal code can\'t be empty.</string>
    <string name="card_number_cant_empty">Card number field can\'t be empty.</string>
    <string name="card_expiry_cant_empty">Card expiry date can\'t be empty.</string>
    <string name="card_length">Card number length should be 12 digits.</string>
    <string name="cvv_cant_empty">CVV field can\'t be empty.</string>
    <string name="cvv_length">CVV length should be 3 digit.</string>
    <string name="order_confirmed">ORDER CONFIRMED!!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="phone_number_length">Phone number length should be 10 digit.</string>
    <string name="sorry_no_products_matched_the_keyword">Sorry, no products matched the keyword.</string>
    <string name="add_a_new_product">Add a New Product</string>
    <string name="product_name">Product Name</string>
    <string name="mcqueen">MCQUEEN</string>
    <string name="brand_name">Brand Name</string>
    <string name="rolex">ROLEX</string>
    <string name="serial_number">Serial Number</string>
    <string name="serial_number_hint">784538-HM-JFD</string>
    <string name="price">Price</string>
    <string name="_8_800">$ 8,800</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="upload_product_image">Please upload product image.</string>
    <string name="product_detail">Product Detail</string>
    <string name="product_name_empty">Product name field can\'t be empty.</string>
    <string name="brand_name_empty">Brand name field can\'t be empty.</string>
    <string name="serial_number_empty">Serial number field can\'t be empty.</string>
    <string name="price_empty">Price field can\'t be empty.</string>
    <string name="product_detail_empty">Product detail field can\'t be empty.</string>
    <string name="product_added_successfully">Product added.</string>
    <string name="unable_to_add_product">Something went wrong.</string>
    <string name="apply_coupon">Apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="invalid_coupon_code">Invalid Coupon Code.</string>
    <string name="remove_coupon">Remove</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="bt_supported_card_types_description">Supported card types</string>
    <string name="valid">Form is valid</string>
    <string name="invalid">Form is invalid</string>
    <string name="fill_required_fields">Please fill above required fields.</string>
</resources>