<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/addProductBtn"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_10sdp"
                app:layout_constraintBottom_toTopOf="@+id/addProductBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/add_a_new_product"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/_115sdp"
                    android:layout_height="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:background="@color/black" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@color/white">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/productImage"
                        android:layout_width="@dimen/_100sdp"
                        android:layout_height="@dimen/_100sdp"
                        android:background="@color/square_border_color"
                        android:src="@drawable/add_image"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/addImageBtn"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@color/black"
                        android:src="@drawable/ic_baseline_add_24"
                        android:tint="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/productImage"
                        app:layout_constraintTop_toTopOf="@+id/productImage"
                        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/product_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/productNameEt"
                    style="@style/AddAddressScreenEditTextStyle"
                    android:layout_marginTop="5dp"
                    android:hint="@string/mcqueen"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/brand_name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/brandNameEt"
                    style="@style/AddAddressScreenEditTextStyle"
                    android:layout_marginTop="5dp"
                    android:hint="@string/rolex"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/serial_number" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/serialNumberEt"
                    style="@style/AddAddressScreenEditTextStyle"
                    android:layout_marginTop="5dp"
                    android:hint="@string/serial_number_hint"
                    android:inputType="text"
                    android:maxLength="12"
                    android:paddingHorizontal="@dimen/_15sdp"
                    android:textAllCaps="true" />

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/price" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/priceEt"
                    style="@style/AddAddressScreenEditTextStyle"
                    android:layout_marginTop="5dp"
                    android:hint="@string/_8_800"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_15sdp" />

                <TextView
                    style="@style/TitleTextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/product_detail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/detailEt"
                    style="@style/AddAddressScreenEditTextStyle"
                    android:layout_marginTop="5dp"
                    android:gravity="top"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:hint="@string/product_detail"
                    android:paddingBottom="@dimen/_5sdp"
                    android:singleLine="false"
                    android:inputType="textMultiLine"
                    android:paddingTop="@dimen/_10sdp"
                    android:scrollbars="vertical"
                    android:maxLines="10"
                    android:paddingHorizontal="@dimen/_15sdp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addProductBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@color/app_bg_color"
            android:fontFamily="@font/nunito_sans_bold"
            android:gravity="center"
            android:text="@string/add_product"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>