<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_bg_color">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signInText"
                style="@style/AppTextStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/login_text"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toStartOf="@+id/guideline1"
                app:layout_constraintHorizontal_bias="0.158"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUpText"
                style="@style/AppTextStyle"
                android:layout_width="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sign_up"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/login_bg_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signInText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginText"
                style="@style/AppTextStyle"
                android:layout_width="wrap_content"
                android:text="@string/sign_up"
                android:textSize="@dimen/_28sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_31sdp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/loginText"
                app:layout_constraintStart_toStartOf="@+id/loginText"
                app:layout_constraintTop_toBottomOf="@+id/loginText" />

            <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEt"
            style="@style/AppEditTextStyle"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_60sdp"
            android:hint="@string/name_text"
            android:inputType="text"
            android:maxLength="25"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingHorizontal="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/userNameEt"
                style="@style/AppEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_60sdp"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameEt" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEt"
                style="@style/AppEditTextStyle"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_60sdp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userNameEt" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUpBtn"
                style="@style/AppTextStyle"
                android:layout_width="wrap_content"
                android:text="@string/submit"
                android:gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:background="@drawable/square_bg"
                android:textSize="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEt" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>