<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/addToCartBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/productImage"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_200sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/productNameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp"
                    app:fontFamily="@font/nunito_sans_bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/serialNumberTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp"
                    app:fontFamily="@font/nunito_sans_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productNameTv" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dummyContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:text="@string/made_only_for_kings"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    app:fontFamily="@font/nunito_sans_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/serialNumberTv" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dummyContent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/productPriceTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_17sdp"
                        android:textStyle="bold"
                        app:fontFamily="@font/nunito_sans_regular" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/taxTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:paddingEnd="@dimen/_20sdp"
                        android:text="+ TAX"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9sdp"
                        app:fontFamily="@font/nunito_sans_regular" />

                </LinearLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/productDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_sans_regular"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:fontFamily="@font/nunito_sans_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addToCartBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/app_bg_color"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/add_to_cart"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:textAllCaps="true"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/buyNowBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buyNowBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/buy_now"
            android:gravity="center"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/but_now_btn_style"
           android:textAllCaps="true"
            android:textColor="@color/app_bg_color"
            android:layout_marginBottom="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>